# kapa

./: CMakeLists.txt
node/: email.html  main.js
plasmoids/: CMakeLists.txt
plasmoids/flightinformation/: metadata.desktop
plasmoids/flightinformation/contents/ui/: main.qml
qml/: CMakeLists.txt  Card.qml  FlightInformation.qml  Heading.qml  flightreservation.cpp  flightreservation.h  qmldir  qmlplugins.cpp
src/: CMakeLists.txt  emailfetchjob.cpp  emailfetchjob.h  main.cpp  microdataparser.cpp  microdataparser.h  processor.cpp  processor.h
src/autotests/: CMakeLists.txt  config.h.in  microDataTest.jsonld  microdataparsertest.cpp
src/autotests/testdata/: data1.html  data1.json-ld  data2.html  data2.json-ld  microDataTest.html  microDataTest.jsonld
src/tools/: CMakeLists.txt  dumpemail.cpp
